<package>
  <name>choreonoid</name>
  <version>0.1.0</version>
  <description>
This program has been developed by Shin'ichiro Nakaoka and Choreonoid Development Team, AIST.

This program is free software; you can redistribute it and/or modify it under the terms of
the GNU Lesser General Public License as published by the Free Software Foundation; either 
version 2.1 of the License, or (at your option) any later version.

This package is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
See the GNU Lesser General Public License for more details.

The source and some binary packages of this program also include the following third-party 
libraries:

* Eigen (http://eigen.tuxfamily.org/)
* IJG JPEG Library (http://www.ijg.org/)
* libpng (http://www.libpng.org/pub/png/libpng.html)
* LibYAML (http://pyyaml.org/wiki/LibYAML)
* OPCODE (http://www.codercorner.com/Opcode.htm)
* zlib (http://zlib.net/)

These libraries are used and redistributed under the terms of their licenses. Please see
the corresponding directories in the source package or their official web sites to see the
details of their licenses.

This program also depends on a lot of other external libraries, which are linked into this
program during the execution. Some binary packages of this program may include the binaries
of the following libraries:

* Qt (http://qt.nokia.com/)
* OpenSceneGraph (http://www.openscenegraph.org)
* Boost C++ Libraries (http://www.boost.org/)

Please see their official web sites to see the details of their licenses.
	</description>
  <maintainer email="k-kojima@jsk.t.u-tokyo.ac.jp">Kunio Kojima</maintainer>

  <license>LGPL 2.1</license>

  <url type="website">http://ros.org/wiki/choreonoid</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Shin'ichiro Nakaoka and Choreonoid Development Team, AIST.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>hrpsys_ros_bridge</build_depend> -->
  <!-- <build_depend>hrpsys_gazebo_msgs</build_depend> -->
  <build_depend>doxygen</build_depend>
  <build_depend>graphviz</build_depend>
  <build_depend>zlib</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libopenscenegraph</build_depend>
  <build_depend>libsimage-dev</build_depend>
  <build_depend>yaml</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqt4-opengl</build_depend>
  <build_depend>wx-common</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>qhull-bin</build_depend>
  <build_depend>mk</build_depend>

  <run_depend>doxygen</run_depend>
  <run_depend>graphviz</run_depend>
  <run_depend>zlib</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libpng12-dev</run_depend>
  <run_depend>libopenscenegraph</run_depend>
  <run_depend>libsimage-dev</run_depend>
  <run_depend>yaml</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libqt4-opengl</run_depend>
  <run_depend>wx-common</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>qhull-bin</run_depend>

  <export>
  </export>
</package>
